<resources>
    <string name="app_name">Pokemon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="search">Search</string>
    <string name="base_experience">base experience</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="pokemon_s_is_not_found">The pokemon is not found. Please, check the name and try again.</string>
    <string name="name_empty">The name is empty. Enter the name and try again.</string>
    <string name="search_random_pokemon">Search random pokemon</string>
    <string name="Something_went_wrong">Oops. Something went wrong. Please try again.</string>
    <string name="search_pokemon">Search Pokemon</string>
    <string name="search_pokemon_by_name">Search pokemon by name</string>
    <string name="favourite_pokemons">Favourite pokemons</string>
</resources>
