<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/search_pokemon_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_pokemon_by_name"/>
        <Button
            android:id="@+id/search_random_pokemon_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_random_pokemon"/>
        <Button
            android:id="@+id/favourite_pokemons_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favourite_pokemons"/>
    </LinearLayout>

</FrameLayout>